# HealthCareAI

./: .gitignore  README.md
backend/: main.py  prompts.py  pyproject.toml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/about/: page.tsx
frontend/app/patient/: page.tsx
frontend/app/volunteer/: page.tsx
frontend/components/: chat-widget.tsx  footer.tsx  header.tsx
frontend/components/ui/: sonner.tsx
